// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Box box-position="..." /> extend 2 props box-position 1`] = `
<div
  className="ek-box ek-box_position_absolute ek-box_place_center"
/>
`;

exports[`<Box box-position="..." /> extend 3 props box-position 1`] = `
<div
  className="ek-box ek-box_position_absolute ek-box_place_center ek-box_zindex_xs"
/>
`;

exports[`<Box box-position="..." /> props box-position 1`] = `
<div
  className="ek-box ek-box_position_absolute"
/>
`;
